# that-overlay

./: .gitignore  CMakeLists.txt  config.h.cmake
debian/: changelog  control
src/gst-plugins/: CMakeLists.txt  gstthatoverlay.cpp  gstthatoverlay.h  thatoverlay.c
src/server/: CMakeLists.txt
src/server/implementation/objects/: ThatOverlayImpl.cpp  ThatOverlayImpl.hpp
src/server/interface/: thatoverlay.ThatOverlay.kmd.json  thatoverlay.kmd.json
